Updated to include button to navigate to the top of the page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+  <div id="home">
+    <a class="top" href="#home">
+      <i class="fa fa-chevron-up"></i>
+    </a>
+  </div>
   <section class="section-1">
     <header class="section-1_header">
       <div class="backdrop"></div>
